fixed navbar collapsing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,13 @@
 body {
     font-family: 'Rubik', sans-serif;
-
+/* 
     margin: 0;
     padding: 0;
     background-image: url('../src/assets/Site_Background.png');
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    overflow: hidden;
+    background-attachment: fixed;
+    background-position: center; */
   }
   
   h1,
@@ -24,6 +23,17 @@ body {
     font-weight: 300;
     font-style: italic;
   }
+
+.backgroundStyle {
+  margin: 0;
+  padding: 0;
+  background-image: url('../src/assets/Site_Background.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  overflow: hidden;
+}
 
 
 
